Seeding a catalog instead of a dataset