@@ -13,16 +13,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  ******************************************************************************/
-package au.gov.ga.earthsci.application.dataset;
+package au.gov.ga.earthsci.application.catalog;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
-import java.net.URL;
 import java.util.Properties;
 
-import org.eclipse.core.runtime.IStatus;
-import org.eclipse.core.runtime.Status;
 import org.eclipse.e4.core.contexts.IEclipseContext;
 import org.eclipse.jface.dialogs.Dialog;
 import org.eclipse.jface.dialogs.IDialogConstants;
@@ -37,10 +35,10 @@ import org.eclipse.swt.widgets.Control;
 import org.eclipse.swt.widgets.Display;
 import org.eclipse.swt.widgets.Label;
 import org.eclipse.swt.widgets.Shell;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import au.gov.ga.earthsci.application.Activator;
-import au.gov.ga.earthsci.catalog.dataset.DatasetIntentHandler;
-import au.gov.ga.earthsci.common.ui.dialogs.StackTraceDialog;
+import au.gov.ga.earthsci.core.seed.SeedXmlIntentHandler;
 import au.gov.ga.earthsci.intent.AbstractIntentCallback;
 import au.gov.ga.earthsci.intent.IIntentCallback;
 import au.gov.ga.earthsci.intent.Intent;
@@ -48,25 +46,27 @@ import au.gov.ga.earthsci.intent.IntentManager;
 import au.gov.ga.earthsci.intent.dispatch.Dispatcher;
 
 /**
- * Dialog which allows a user to choose form a dataset list.
+ * Dialog which allows a user to choose from a catalog list.
  * 
  * @author Elton Carneiro (elton.carneiro@ga.gov.au)
  */
 @SuppressWarnings("nls")
-public class DatasetSelectionDialog extends Dialog
+public class CatalogSelectionDialog extends Dialog
 {
-	private static final String BUNDLE_NAME = "datasets.properties";
-	private Properties datasetProperties;
-	private String datasetName = null;
+	private static final Logger logger = LoggerFactory.getLogger(CatalogSelectionDialog.class);
+	private static final String BUNDLE_NAME = "catalogs.properties";
+
+	private Properties catalogProperties;
+	private String catalogName = null;
 	private IEclipseContext context;
 
-	public DatasetSelectionDialog(Shell parentShell, IEclipseContext context)
+	public CatalogSelectionDialog(Shell parentShell, IEclipseContext context)
 	{
 		super(parentShell);
 		try
 		{
 			this.context = context;
-			loadDatasetProperties();
+			loadCatalogProperties();
 		}
 		catch (IOException e)
 		{
@@ -74,31 +74,42 @@ public class DatasetSelectionDialog extends Dialog
 		}
 	}
 
-	private void loadDatasetProperties() throws IOException
+	private void loadCatalogProperties() throws IOException
 	{
-		datasetProperties = new Properties();
+		catalogProperties = new Properties();
 		InputStream inputStream = getClass().getResourceAsStream(BUNDLE_NAME);
-		datasetProperties.load(inputStream);
+		catalogProperties.load(inputStream);
 		inputStream.close();
 	}
 
-	private String getDatasetValue(String key, int index)
+	private String getCatalogValue(String key, int index)
 	{
-		String value = datasetProperties.getProperty(key);
+		String value = catalogProperties.getProperty(key);
 		String[] valueArray = value.split(";");
 		return valueArray[index];
 	}
 
-	private void loadDataset(String datasetUrl)
+	private void loadCatalog(String catalogUrl)
 	{
 		try
 		{
-			//URI uri = new File(datasetUrl).toURI();
-			URI uri = new URL(datasetUrl).toURI();
+			URI uri = null;
+
+			// Try a local file first, then a remote URL
+			File file = new File(catalogUrl);
+			if (file.isFile())
+			{
+				uri = file.toURI();
+			}
+			else
+			{
+				uri = new URI(catalogUrl);
+			}
+
 			Intent intent = new Intent();
 			intent.setURI(uri);
-			//intent.setContentType(contentType)
-			intent.setHandler(DatasetIntentHandler.class);
+			intent.setHandler(SeedXmlIntentHandler.class);
+
 			IIntentCallback callback = new AbstractIntentCallback()
 			{
 				@Override
@@ -125,7 +136,7 @@ public class DatasetSelectionDialog extends Dialog
 	protected void configureShell(Shell shell)
 	{
 		super.configureShell(shell);
-		shell.setText(Messages.DatasetSelectionDialog_DatasetSelection);
+		shell.setText(Messages.CatalogSelectionDialog_CatalogSelection);
 	}
 
 	@Override
@@ -135,37 +146,37 @@ public class DatasetSelectionDialog extends Dialog
 		composite.setLayout(new GridLayout());
 
 		Label label = new Label(composite, SWT.NONE);
-		label.setText(Messages.DatasetSelectionDialog_ChooseDataset + ':');
+		label.setText(Messages.CatalogSelectionDialog_ChooseCatalog + ':');
 
-		createDatasetCombo(composite);
+		createCatalogCombo(composite);
 
 		return composite;
 	}
 
-	protected void createDatasetCombo(Composite parent)
+	protected void createCatalogCombo(Composite parent)
 	{
-		final Combo datasetCombo = new Combo(parent, SWT.DROP_DOWN | SWT.READ_ONLY);
+		final Combo catalogCombo = new Combo(parent, SWT.DROP_DOWN | SWT.READ_ONLY);
 
-		// Add all dataset names into the drop-down list
+		// Add all catalog names into the drop-down list
 		String value;
-		datasetCombo.add("None", 0);
-		for (Object key : datasetProperties.keySet())
+		catalogCombo.add("None", 0);
+		for (Object key : catalogProperties.keySet())
 		{
-			value = getDatasetValue(key.toString(), 0);
-			datasetCombo.add(value);
+			value = getCatalogValue(key.toString(), 0);
+			catalogCombo.add(value);
 		}
 
-		datasetCombo.select(0);
+		catalogCombo.select(0);
 		GridData data = new GridData(GridData.FILL_HORIZONTAL);
 		data.widthHint = convertHorizontalDLUsToPixels(IDialogConstants.ENTRY_FIELD_WIDTH);
-		datasetCombo.setLayoutData(data);
+		catalogCombo.setLayoutData(data);
 
-		datasetCombo.addModifyListener(new ModifyListener()
+		catalogCombo.addModifyListener(new ModifyListener()
 		{
 			@Override
 			public void modifyText(ModifyEvent event)
 			{
-				datasetName = datasetCombo.getText();
+				catalogName = catalogCombo.getText();
 			}
 		});
 	}
@@ -173,23 +184,23 @@ public class DatasetSelectionDialog extends Dialog
 	@Override
 	protected void okPressed()
 	{
-		// Obtain and load a dataset
-		String datasetUrl = null;
-		if (!"None".equals(datasetName))
+		// Obtain and load a catalog
+		String catalogUrl = null;
+		if (!"None".equals(catalogName))
 		{
 			String value;
-			for (Object key : datasetProperties.keySet())
+			for (Object key : catalogProperties.keySet())
 			{
-				value = getDatasetValue(key.toString(), 0);
-				if (value.equals(datasetName))
+				value = getCatalogValue(key.toString(), 0);
+				if (value.equals(catalogName))
 				{
-					datasetUrl = getDatasetValue(key.toString(), 1);
+					catalogUrl = getCatalogValue(key.toString(), 1);
 					break;
 				}
 			}
-			if (datasetUrl != null)
+			if (catalogUrl != null)
 			{
-				loadDataset(datasetUrl);
+				loadCatalog(catalogUrl);
 			}
 		}
 
@@ -198,22 +209,13 @@ public class DatasetSelectionDialog extends Dialog
 
 	private void showError(final Exception e)
 	{
-		final Shell shell = Display.getDefault().getActiveShell();
-		shell.getDisplay().asyncExec(new Runnable()
-		{
-			@Override
-			public void run()
-			{
-				IStatus status = new Status(IStatus.ERROR, Activator.getBundleName(), e.getLocalizedMessage(), e);
-				StackTraceDialog.openError(shell, "Error", "Error opening file.", status);
-			}
-		});
+		logger.warn("showError - could not load selected catalog, reason: ", e);
 	}
 
 	public static void openDialog(IEclipseContext context)
 	{
 		Shell activeShell = Display.getDefault().getActiveShell();
-		DatasetSelectionDialog datasetSelectionDialog = new DatasetSelectionDialog(activeShell, context);
-		datasetSelectionDialog.open();
+		CatalogSelectionDialog catalogSelectionDialog = new CatalogSelectionDialog(activeShell, context);
+		catalogSelectionDialog.open();
 	}
 }
